# subql

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  deny.toml  fuzz.sh  subql.toml.example
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: dispatch.rs  memory.rs
fuzz/: Cargo.toml  fuzz_canonicalize.rs  fuzz_codec_decode.rs  fuzz_deserialize_shard.rs  fuzz_parse_sql.rs  fuzz_vm_eval.rs
hfuzz_target/: fuzz_canonicalize.rs  fuzz_codec_decode.rs  fuzz_deserialize_shard.rs  fuzz_parse_sql.rs  fuzz_vm_eval.rs
scripts/: install-git-hooks.sh
src/: config.rs  errors.rs  fuzz_helpers.rs  lib.rs  memory_profile_workload.rs  simple_catalog.rs  table_resolution.rs  test_harnesses.rs  types.rs
src/compiler/: bytecode.rs  canonicalize.rs  cell_cmp.rs  literals.rs  mod.rs  parser.rs  prefilter.rs  sql_shape.rs  tristate.rs  vm.rs
src/persistence/: codec.rs  merge.rs  mod.rs  predicate_data.rs  shard.rs  test_support.rs
src/runtime/: agg.rs  dispatch.rs  engine.rs  ids.rs  indexes.rs  mod.rs  partition.rs  predicate.rs
src/wal/: debezium.rs  map_cdc.rs  maxwell.rs  mod.rs  pg_type.rs  pgoutput.rs  row_build.rs  test_support.rs  wal2json.rs
tests/: cdc_cross_db.rs  proptest_dispatch.rs
tests/crashes/fuzz_canonicalize/: sigabrt_19cd33fc2a.fuzz  sigabrt_1af2ab79bc.fuzz  sigsegv_19f745337a.fuzz  sigsegv_c7bf8c596.fuzz
tests/crashes/fuzz_vm_eval/: sigabrt_1a68864dc6.fuzz  sigabrt_1aaf47b8ca.fuzz  sigabrt_e477bad64.fuzz
tests/fixtures/: Dockerfile.postgres
