[package]
name = "subql"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "SQL subscription dispatch engine for CDC event fanout"
repository = "https://github.com/yourusername/subql"
readme = "README.md"
keywords = ["sql", "cdc", "subscription", "postgres", "streaming"]
categories = ["database", "parser-implementations"]

[lib]
name = "subql"
path = "src/lib.rs"

# Benchmark harness
[[bench]]
name = "dispatch"
harness = false

[dependencies]
# SQL parsing (supports multiple dialects)
sqlparser = { version = "0.47", features = ["visitor"] }

# Compressed bitmaps for predicate/user sets
roaring = "0.10"

# Stable ID allocation (predicates)
slab = "0.4"

# Atomic pointer swap for immutable snapshots
arc-swap = "1.7"

# Fast hashing
ahash = "0.8"          # Runtime hashing
seahash = "4.1"        # Deterministic hashing for canonicalization

# Serialization
bincode = "1.3"        # Binary encoding
lz4 = "1.24"           # Fast compression

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Optional features
tracing = { version = "0.1", optional = true }

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property testing
proptest = "1.4"

# Temporary directories for shard tests
tempfile = "3.8"

# Memory profiling
dhat = "0.3"

[features]
default = []
observability = ["dep:tracing"]

# Performance profiling
profiling = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
