[package]
name = "subql"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "SQL subscription dispatch engine for CDC event fanout"
repository = "https://github.com/yourusername/subql"
readme = "README.md"
keywords = ["sql", "cdc", "subscription", "postgres", "streaming"]
categories = ["database", "parser-implementations"]

[lib]
name = "subql"
path = "src/lib.rs"

# Binary target
[[bin]]
name = "subql"
path = "src/bin/subql.rs"

# Validation binary
[[bin]]
name = "validate_benchmark"
path = "src/bin/validate_benchmark.rs"

# Edge case analysis binary
[[bin]]
name = "analyze_edge_cases"
path = "src/bin/analyze_edge_cases.rs"

# Memory profiling binary
[[bin]]
name = "memory_profile"
path = "benches/memory.rs"
required-features = ["dhat-heap"]

# Fuzzing targets
[[bin]]
name = "fuzz_parse_sql"
path = "hfuzz_target/fuzz_parse_sql.rs"
required-features = ["fuzzing"]

[[bin]]
name = "fuzz_vm_eval"
path = "hfuzz_target/fuzz_vm_eval.rs"
required-features = ["fuzzing"]

[[bin]]
name = "fuzz_deserialize_shard"
path = "hfuzz_target/fuzz_deserialize_shard.rs"
required-features = ["fuzzing"]

[[bin]]
name = "fuzz_canonicalize"
path = "hfuzz_target/fuzz_canonicalize.rs"
required-features = ["fuzzing"]

[[bin]]
name = "fuzz_codec_decode"
path = "hfuzz_target/fuzz_codec_decode.rs"
required-features = ["fuzzing"]

# Benchmark harness
[[bench]]
name = "dispatch"
harness = false

[dependencies]
# SQL parsing (supports multiple dialects)
sqlparser = { version = "0.47", features = ["visitor"] }

# Compressed bitmaps for predicate/user sets
roaring = "0.10"

# Stable ID allocation (predicates)
slab = "0.4"

# Atomic pointer swap for immutable snapshots
arc-swap = "1.7"

# Fast hashing
ahash = "0.8"          # Runtime hashing
seahash = "4.1"        # Deterministic hashing for canonicalization

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"        # Binary encoding
lz4 = "1.24"           # Fast compression

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"

# Optional features
tracing = { version = "0.1", optional = true }
dhat = { version = "0.3", optional = true }

# Fuzzing
honggfuzz = { version = "0.5", optional = true }
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property testing
proptest = "1.4"

# Temporary directories for shard tests
tempfile = "3.8"

[features]
default = []
observability = ["dep:tracing"]

# Performance profiling
profiling = []

# Memory profiling with dhat
dhat-heap = ["dep:dhat"]

# Fuzzing with honggfuzz
fuzzing = ["dep:honggfuzz", "dep:arbitrary"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
