[package]
name = "subql"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Luca"]
license = "MIT OR Apache-2.0"
description = "SQL subscription dispatch engine for CDC event fanout"
repository = "https://github.com/luca/subql"
readme = "README.md"
keywords = ["sql", "cdc", "subscription", "postgres", "streaming"]
categories = ["database", "parser-implementations"]

[lib]
name = "subql"
path = "src/lib.rs"

# Memory profiling binary
[[bin]]
name = "memory_profile"
path = "src/bin/memory_profile.rs"
required-features = ["dhat-heap"]

# Benchmark harness
[[bench]]
name = "dispatch"
harness = false

[dependencies]
# SQL parsing (supports multiple dialects)
sqlparser = { git = "https://github.com/apache/datafusion-sqlparser-rs.git", features = ["visitor"] }

# Compressed bitmaps for predicate/user sets
roaring = "0.11.3"

# Stable ID allocation (predicates)
slab = "0.4"

# Atomic pointer swap for immutable snapshots
arc-swap = "1.7"

# Fast hashing
ahash = "0.8"          # Runtime hashing
seahash = "4.1"        # Deterministic hashing for canonicalization

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"       # JSON deserialization (WAL parsers)
postcard = { version = "1.1", default-features = false, features = ["use-std"] } # Binary encoding
lz4 = "1.24"           # Fast compression

# Error handling
thiserror = "2.0"

# Configuration
toml = "0.9.8"

# Optional features
tracing = { version = "0.1", optional = true }
dhat = { version = "0.3", optional = true }
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
# Benchmarking
criterion = { version = "0.8.2", features = ["html_reports"] }

# Temporary directories for shard tests
tempfile = "3.8"

# Structured fuzzing (needed by regression tests)
arbitrary = { version = "1", features = ["derive"] }

# Cross-DB CDC integration test
diesel = { version = "2", features = ["postgres", "mysql"] }
testcontainers = { version = "0.27", features = ["blocking"] }

# Property-based testing
proptest = "1"

[features]
default = []
testing = ["dep:arbitrary"]
observability = ["dep:tracing"]

# Memory profiling with dhat
dhat-heap = ["dep:dhat"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Restriction lints (opt-in, high-value)
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
rest_pat_in_fully_bound_structs = "warn"
implicit_clone = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"

# Allowed exceptions
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
